kubernetes/apps/media/bazarr/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bazarr
spec:
  # Subtitle manager. Selecting it makes it default-deny. media is one trust
  # zone (intra-media allowed, cross-namespace denied). Fetches subtitles from
  # external providers over HTTPS.
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: media
      app.kubernetes.io/name: bazarr
  ingress:
    # Proxied UI from the internal gateway + intra-media API calls + kubelet probe
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
        - matchLabels:
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    # DNS resolution (L7 so lookups are visible to Cilium's DNS proxy)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Intra-media trust zone
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
    # Subtitle providers over HTTPS
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
